--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.5",
+    "react-input-mask": "^3.0.0-alpha.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
