--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "foobar-app",
   "version": "0.1.0",
   "private": true,
- "homepage": "https://suppmen.github.io/FooBar",
+  "homepage": "https://suppmen.github.io/FooBar",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "gh-pages": "^3.1.0",
-    "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.5",
@@ -42,5 +41,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^5.0.1",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0"
   }
 }
