--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-input-mask": "^3.0.0-alpha.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
